[package]
name = "pid"
version = "4.0.0"
edition = "2018"
authors = ["Ken Elkabany <ken@elkabany.com>"]
license = "MIT"
description = "A PID controller."
repository = "https://github.com/braincore/pid-rs"
keywords = ["pid"]
readme = "README.md"

[dependencies.num-traits]
version = "0.2"
default-features = false

[dependencies.serde]
version = "1.0"
optional = true
default-features = false
features = ["derive"]

[badges]
travis-ci = { repository = "braincore/pid-rs" }

