[package]
name = "pid"
version = "4.0.0"
edition = "2018"
authors = [
    "Ken Elkabany <ken@elkabany.com>",
    "Owez Griffiths <root@ogriffiths.com>",
]
license = "MIT OR Apache-2.0"
description = "A PID controller."
repository = "https://github.com/braincore/pid-rs"
keywords = ["pid"]
categories = ["no-std", "embedded", "algorithms"]
readme = "README.md"

[dependencies]
num-traits = { version = "0.2", default-features = false }
serde = { version = "1.0", default-features = false, features = ["derive"], optional = true }

[badges]
travis-ci = { repository = "braincore/pid-rs" }
